# mateLight

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  FrameMessage.h  allocator.cpp  allocator.h  color.cpp  color.h  frame.cpp  frame.h  ringbuffer.cpp  ringbuffer.h  task.cpp  task.h
pi/: .gitignore  charmaps.h  matelight.c
test/: CMakeLists.txt
test/alloctest/: .gitignore  CMakeLists.txt  main.cpp
